hashcode function may change the size of map.